--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,9 @@
 {% block content %}
 	<div class="hero-unit">
 		<h1>It's time to talk education</h1>
-		<p>
+		<p style="font-size:1.2em">
 			Whether you're a student, teacher, school administrator, parent, or just someone interested 
-			in education, we need YOU.	
+			in education, we need <span style="color:red">YOU</span>.	
 		</p>
 		<p>
 			<a class="btn btn-primary btn-large">
