--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -6,6 +6,9 @@
 {% block title %}{{ page_title }} - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<script	type="text/javascript" src="{% static 'js/ajax_script.js' %}"></script>	
+	<script	type="text/javascript" src="{% static 'js/vote_script.js' %}"></script>
+
 	<div class="move_right">
 	{% if user.is_authenticated %}
 		<br/ id="id_line_break">
@@ -100,17 +103,12 @@
 			<canvas id="myCanvas{{post.id}}" width="125" height="100">
          		   If you see this, your browser does not support HTML5 Canvas. Sorry :(
         		</canvas>
-			<script	src="{% static 'js/vote_script.js' %}"></script>
 			<script type="text/javascript">
 				$(document).ready(function() {
 					var canv = document.getElementById("myCanvas{{post.id}}");
 					var draw = canv.getContext("2d");
-					drawPulseOutline(draw);
-					{% for user_type_key in user_color_dict %}
-						draw.fillStyle = "{{ user_color_dict|get_item:user_type_key }}";
-						drawPulse({{ post.votes_by_user_type|key:user_type_key|key:2 }}, separationDist*({{ forloop.counter }}-1), draw);
-					{% endfor %}
-					drawMiddle({{ post.vote_percentage }}, draw);
+					drawPulseOutline(draw);	
+					drawEntireChart(draw, "{{user_color_dict|safe}}", "{{post.votes_by_user_type|safe}}", {{ post.vote_percentage|safe }}, false);
 				});
 			</script>
 			<p class="poststats{{post.id}}" style="text-align:center">
@@ -174,57 +172,5 @@
 		</span>
 	</div>
  	</div>
-
-
-
-	{# Like/Unlike JS and Ajax #}
-	<script type="text/javascript">
-		$(document).ready(function() {
-var create_vote = function() {
-	var args = { type:"GET", url:$(this).attr('href'), data:{},
-			success: function(data) { 
-			if(data) {
-				var canv = document.getElementById("myCanvas"+data["post_id"]);
-				var draw = canv.getContext("2d");
-				clearPulse(draw);
-				{% for user_type_key in user_color_dict %}
-					draw.fillStyle = "{{ user_color_dict|get_item:user_type_key }}";
-					drawPulse(data["post_dict"]["{{user_type_key}}"][2], separationDist*({{ forloop.counter }}-1), draw);
-				{% endfor %}
-				drawMiddle(data["post_mid"], draw);
-				$('.poststats'+data["post_id"]).load(' .poststats'+data["post_id"])
-				}}};
-	$.ajax(args);
-	return false;
-};
-
-var mark_as_spam = function() {
-	var args = { type:"GET", url:$(this).attr('href'), data:{},
-			success: function(data) { 
-			if(data) {
-				var textNode = document.createTextNode(" Thanks!");
-				//TOFIX LATER: Should be able to access w/o need for id (like via $(this).parent)
-				var child = document.getElementById('post_links'+data["id"]);
-				child.parentNode.insertBefore(textNode, child.nextSibling);
-			}}};
-	$.ajax(args);
-	return false;
-};
-
-$.ajaxSetup({
-    crossDomain: false, // obviates need for sameOrigin test
-    beforeSend: function(xhr, settings) {
-        if (!csrfSafeMethod(settings.type)) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-        }
-    }
-});		
- 
-			var csrftoken = getCookie('csrftoken');
-			$("body").on("click", ".up", create_vote);
-			$("body").on("click", ".down", create_vote);
-			$("body").on("click", ".spam", mark_as_spam);
-		});
-	</script>
 
 {% endblock content %}
