--- a/templates/comment_display.html
+++ b/templates/comment_display.html
@@ -20,11 +20,7 @@
 						var draw = canv.getContext("2d");
 						draw.strokeStyle = "White";
 						drawPulseOutline(draw);
-						{% for user_type_key in user_color_dict %}
-							draw.fillStyle = "{{ user_color_dict|get_item:user_type_key }}";
-							drawPulse({{ c.votes_by_user_type|key:user_type_key|key:2 }}, separationDist*({{ forloop.counter }}-1), draw);
-						{% endfor %}
-						drawMiddle({{ c.vote_percentage }}, draw);
+						drawEntireChart(draw, "{{user_color_dict|safe}}", "{{c.votes_by_user_type|safe}}", {{ c.vote_percentage|safe }}, false);
 					});
 				</script>
 				<p class="comstats{{c.id}}" style="text-align:center">
