--- a/templates/comment_display.html
+++ b/templates/comment_display.html
@@ -7,13 +7,9 @@
 			<li id="{{c.id}}" class="comment_box" style="margin-left:{{c.depth|add:c.depth}}em">
 			{# Vote Display #}
 			<div class="vote_display_div">
-
-				{% if not data %}
 				<canvas id="commentCanvas{{c.id}}" width="125" height="100">
          			   If you see this, your browser does not support HTML5 Canvas. Sorry :(
         			</canvas>
-				{% endif %}
-
 				<script type="text/javascript">
 					$(document).ready(function() {
 						var canv = document.getElementById("commentCanvas{{c.id}}");
@@ -35,8 +31,8 @@
 			<div style="height:22px"></div>
 
 			{# Votes and spam links #}
+			<p>
 			{% if user.is_authenticated %}
-				<p>
 				<div id="comment_links{{c.id}}" style="display:inline-block">
 					<a class="up" href="{% url 'up_vote' id=c.id item_type='c'%}">Up</a> &nbsp;
 					<a class="down" href="{% url 'down_vote' id=c.id item_type='c'%}">Down</a> &nbsp;
@@ -45,18 +41,20 @@
 						<a href="{% url 'delete_comment' c.id %}?next={{request.path}}"
 						onclick="return confirm('Your comment and any sub-comments will be permanently deleted. Continue?')">Delete</a>
 					{% endif %}
-				</div>
-			{% endif %}	
-			
-				{# Replies and delete links #}
+				</div>	
+				{# Reply links #}
 				<div class="inline_right">
 					<a class="show_replies" href="{% url 'show_replies' c.id %}">Show replies({{c.children}})</a>&nbsp;
-					{% if user.is_authenticated %}			
 						<a href="" class="reply">Reply</a>&nbsp;
-					{% endif %}	
 				</div>
-				</p>
-			</div>
+			{% else %}
+				{# Good display if not logged in #}
+				<div style="display:inline-block">
+					<a class="show_replies" href="{% url 'show_replies' c.id %}">Show replies({{c.children}})</a>&nbsp;
+				</div>
+			{% endif %}
+			</p>	
+			</div> {# End item display div #}
 			</li>
 		{% empty %}
 			<li>There are currently no comments. You can be first!</li>
