Tests updated, minor changes elsewhere

--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -74,7 +74,7 @@
 	{% if posts %}
 	<div class="btn-group" style="margin-bottom:5px">
 		<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
-			Sort by:
+			Sort by
 			<span class="caret"></span>
 		</a>
 		<ul class="dropdown-menu">
