Learn more template added, bootstrap styled

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 			in education, we need <span style="color:red">YOU</span>.	
 		</p>
 		<p>
-			<a class="btn btn-primary btn-large">
+			<a class="btn btn-primary btn-large" href="{% url 'learn_more' %}">
 				Learn more
 			</a>
 		</p>
