--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -24,10 +24,14 @@
 				{{ form.email.errors }}
 			</div>
 		{% endif %}
-		<p>
-			<label for="id_email">E-mail address:</label> {{ form.email }} 
-			<button class="btn btn-primary" type="submit" name="reset_pass_submit">Reset password</button>
-		</p>
+
+		<table>
+			<tr>
+				<td><label for="id_email">E-mail address:</label> </td>
+				<td>{{ form.email }}</td>
+			</tr>			
+		</table>
+		<button class="btn btn-primary" type="submit" name="reset_pass_submit">Reset password</button>
 	</form>
 	</div>
 {% endblock content %}
