--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -16,11 +16,8 @@
 	<form method="get" action=".">
 		<table>
 		{{ form.as_table }}
-			<tr>
-				<td>&nbsp;</td>
-				<td><button class="btn btn-primary" type="submit">Search</button></td>
-			</tr>
 		</table>
+		<button class="btn btn-primary" type="submit">Search</button>
 
 	{% if query %}
 		<h3>Results</h3>
