--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
 				<input type="password" name="password" id="id_pass_login"/><br/>
 				<label><input type="checkbox" name="remember_me"/>&nbsp;Remember me</label>
 				<button class="btn btn-primary btn-large" type="submit" name="login">Login</button><br/><br/>
-				<a href="/accounts/register">Create an account</a><br/>
+				<a href="{% url 'register' %}">Create an account</a><br/>
 				<a href="{% url 'password_reset' %}">Forgot my password</a>
 				{% if next and next.strip %}
 					{# Next value is provided, redirect back to that page #}
